--- a/libs/messenger-components/messenger-menu/src/messenger-menu.component.html
+++ b/libs/messenger-components/messenger-menu/src/messenger-menu.component.html
@@ -1,6 +1,4 @@
-<button mat-icon-button
-        aria-label='messenger menu'
-        [matMenuTriggerFor]='menu'>
+<button mat-icon-button aria-label="messenger menu" [matMenuTriggerFor]="menu">
   <mat-icon>more_vert</mat-icon>
 </button>
 <mat-menu #menu>
