--- a/apps/jd/src/styles.scss
+++ b/apps/jd/src/styles.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '~@angular/material' as mat;
@@ -20,13 +19,15 @@ $jd-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$jd-theme: mat.define-light-theme((
-  color: (
-    primary: $jd-primary,
-    accent: $jd-accent,
-    warn: $jd-warn,
+$jd-theme: mat.define-light-theme(
+  (
+    color: (
+      primary: $jd-primary,
+      accent: $jd-accent,
+      warn: $jd-warn,
+    ),
   )
-));
+);
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
@@ -35,5 +36,25 @@ $jd-theme: mat.define-light-theme((
 
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
+
+//.cdk-virtual-scroll-content-wrapper {
+//  border: 5px solid purple;
+//  display: flex;
+//  flex-direction: column-reverse;
+//}
+
+main {
+  background-color: red;
+}
+
+.v-spacer {
+  flex: 1 1 auto;
+}
